// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Grid column 1`] = `
<div
  class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
>
  <div
    class="column row default-width position-center text-align-left top normal "
  >
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      />
    </div>
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      />
    </div>
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      />
    </div>
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid columns in reverse order 1`] = `
<div
  class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
>
  <div
    class="reverse row default-width position-center text-align-left top normal "
  >
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      >
        1
      </div>
    </div>
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      >
        2
      </div>
    </div>
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      >
        3
      </div>
    </div>
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      >
        4
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid complex vertical alignment example 1`] = `
<div
  class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
>
  <div
    class="row default-width position-start text-align-left top normal "
  >
    <div
      class="col-lg-4 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
        style="height:300px"
      >
        <div
          class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
        >
          <div
            class="row default-width position-start text-align-left bottom normal "
          >
            <div
              class="col-lg-12 col-lg-offset-0 "
            >
              <div
                class="Gridstory__BoxWhite-sc-1gljmzb-1 ibGzPU"
              >
                i am on the bottom
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="col-lg-4 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
        style="height:300px"
      >
        <div
          class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
        >
          <div
            class="row default-width position-start text-align-left middle normal "
          >
            <div
              class="col-lg-12 col-lg-offset-0 "
            >
              <div
                class="Gridstory__BoxWhite-sc-1gljmzb-1 ibGzPU"
              >
                i am on the middle
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="col-lg-4 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
        style="height:300px"
      >
        <div
          class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
        >
          <div
            class="row default-width position-start text-align-left top normal "
          >
            <div
              class="col-lg-12 col-lg-offset-0 "
            >
              <div
                class="Gridstory__BoxWhite-sc-1gljmzb-1 ibGzPU"
              >
                i am on the top
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid default width 1`] = `
<div
  class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
>
  <div
    class="row default-width position-start text-align-left top normal "
  >
    <div
      class="col-lg-12 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid full width 1`] = `
<div
  class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
>
  <div
    class="full-width row default-width position-start text-align-left top normal "
  >
    <div
      class="col-lg-12 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid hidden column only on small devices 1`] = `
<div
  class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
>
  <div
    class="row default-width position-center text-align-left top normal "
  >
    <div
      class="col-md-7 col-sm-12 col-xs-7 col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      />
    </div>
    <div
      class="col-md-10 col-sm-hide col-xs-7 col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__BoxWhite-sc-1gljmzb-1 ibGzPU"
      />
    </div>
    <div
      class="col-md-7 col-sm-12 col-xs-7 col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid nested rows 1`] = `
<div
  class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
>
  <div
    class="row default-width position-center text-align-left top normal "
  >
    <div
      class="col-lg-10 col-lg-offset-0 "
    >
      <div
        class="Gridstory__BoxWhite-sc-1gljmzb-1 ibGzPU"
      >
        <div
          class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
        >
          <div
            class="row default-width position-center text-align-left top normal "
          >
            <div
              class="col-lg-1 col-lg-offset-0 "
            >
              <div
                class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
              >
                1
              </div>
            </div>
            <div
              class="col-lg-1 col-lg-offset-0 "
            >
              <div
                class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
              >
                2
              </div>
            </div>
            <div
              class="col-lg-1 col-lg-offset-0 "
            >
              <div
                class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
              >
                3
              </div>
            </div>
            <div
              class="col-lg-1 col-lg-offset-0 "
            >
              <div
                class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
              >
                4
              </div>
            </div>
            <div
              class="col-lg-1 col-lg-offset-0 "
            >
              <div
                class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
              >
                5
              </div>
            </div>
            <div
              class="col-lg-1 col-lg-offset-0 "
            >
              <div
                class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
              >
                6
              </div>
            </div>
            <div
              class="col-lg-1 col-lg-offset-0 "
            >
              <div
                class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
              >
                7
              </div>
            </div>
            <div
              class="col-lg-1 col-lg-offset-0 "
            >
              <div
                class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
              >
                8
              </div>
            </div>
            <div
              class="col-lg-1 col-lg-offset-0 "
            >
              <div
                class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
              >
                9
              </div>
            </div>
            <div
              class="col-lg-1 col-lg-offset-0 "
            >
              <div
                class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
              >
                10
              </div>
            </div>
            <div
              class="col-lg-1 col-lg-offset-0 "
            >
              <div
                class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
              >
                11
              </div>
            </div>
            <div
              class="col-lg-1 col-lg-offset-0 "
            >
              <div
                class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
              >
                12
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid offset 1`] = `
<div>
  <div
    class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
  >
    <div
      class="row default-width position-start text-align-left top around "
    >
      <div
        class="col-lg-1 col-lg-offset-11 "
      >
        <div
          class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
        />
      </div>
    </div>
  </div>
  <div
    class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
  >
    <div
      class="row default-width position-start text-align-left top around "
    >
      <div
        class="col-lg-2 col-lg-offset-10 "
      >
        <div
          class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
        />
      </div>
    </div>
  </div>
  <div
    class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
  >
    <div
      class="row default-width position-start text-align-left top around "
    >
      <div
        class="col-lg-3 col-lg-offset-9 "
      >
        <div
          class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
        />
      </div>
    </div>
  </div>
  <div
    class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
  >
    <div
      class="row default-width position-start text-align-left top around "
    >
      <div
        class="col-lg-4 col-lg-offset-8 "
      >
        <div
          class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
        />
      </div>
    </div>
  </div>
  <div
    class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
  >
    <div
      class="row default-width position-start text-align-left top around "
    >
      <div
        class="col-lg-5 col-lg-offset-7 "
      >
        <div
          class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
        />
      </div>
    </div>
  </div>
  <div
    class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
  >
    <div
      class="row default-width position-start text-align-left top around "
    >
      <div
        class="col-lg-6 col-lg-offset-6 "
      >
        <div
          class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
        />
      </div>
    </div>
  </div>
  <div
    class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
  >
    <div
      class="row default-width position-start text-align-left top around "
    >
      <div
        class="col-lg-7 col-lg-offset-5 "
      >
        <div
          class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
        />
      </div>
    </div>
  </div>
  <div
    class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
  >
    <div
      class="row default-width position-start text-align-left top around "
    >
      <div
        class="col-lg-8 col-lg-offset-4 "
      >
        <div
          class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
        />
      </div>
    </div>
  </div>
  <div
    class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
  >
    <div
      class="row default-width position-start text-align-left top around "
    >
      <div
        class="col-lg-9 col-lg-offset-3 "
      >
        <div
          class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
        />
      </div>
    </div>
  </div>
  <div
    class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
  >
    <div
      class="row default-width position-start text-align-left top around "
    >
      <div
        class="col-lg-10 col-lg-offset-2 "
      >
        <div
          class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
        />
      </div>
    </div>
  </div>
  <div
    class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
  >
    <div
      class="row default-width position-start text-align-left top around "
    >
      <div
        class="col-lg-11 col-lg-offset-1 "
      >
        <div
          class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid position center 1`] = `
<div
  class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
>
  <div
    class="row default-width position-center text-align-left top normal "
  >
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      />
    </div>
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid position end 1`] = `
<div
  class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
>
  <div
    class="row default-width position-end text-align-left top normal "
  >
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      />
    </div>
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid position start 1`] = `
<div
  class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
>
  <div
    class="row default-width position-start text-align-left top normal "
  >
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      />
    </div>
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid responsive column sizes 1`] = `
<div
  class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
>
  <div
    class="row default-width position-center text-align-left top normal "
  >
    <div
      class="col-md-7 col-sm-3 col-xs-10 col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      />
    </div>
    <div
      class="col-md-8 col-sm-3 col-xs-10 col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__BoxWhite-sc-1gljmzb-1 ibGzPU"
      />
    </div>
    <div
      class="col-md-7 col-sm-3 col-xs-10 col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid responsive position end 1`] = `
<div
  class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
>
  <div
    class="position-md-end row default-width position-start text-align-left top normal "
  >
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      />
    </div>
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__BoxWhite-sc-1gljmzb-1 ibGzPU"
      />
    </div>
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid responsive text align is on right 1`] = `
<div
  class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
>
  <div
    class="text-align-md-right row default-width position-center text-align-left top normal "
  >
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      >
        1
      </div>
    </div>
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      >
        2
      </div>
    </div>
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      >
        3
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid space around 1`] = `
<div
  class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
>
  <div
    class="row default-width position-start text-align-left top around "
  >
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      />
    </div>
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      />
    </div>
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid space between 1`] = `
<div
  class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
>
  <div
    class="row default-width position-start text-align-left top between "
  >
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      />
    </div>
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      />
    </div>
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid space evenly 1`] = `
<div
  class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
>
  <div
    class="row default-width position-start text-align-left top evenly "
  >
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      />
    </div>
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      />
    </div>
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid text align is on center 1`] = `
<div
  class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
>
  <div
    class="row default-width position-center text-align-center top normal "
  >
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      >
        1
      </div>
    </div>
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      >
        2
      </div>
    </div>
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      >
        3
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid text align is on left 1`] = `
<div
  class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
>
  <div
    class="row default-width position-center text-align-left top normal "
  >
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      >
        1
      </div>
    </div>
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      >
        2
      </div>
    </div>
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      >
        3
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid text align is on right 1`] = `
<div
  class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
>
  <div
    class="row default-width position-center text-align-right top normal "
  >
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      >
        1
      </div>
    </div>
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      >
        2
      </div>
    </div>
    <div
      class="col-lg-3 col-lg-offset-0 "
    >
      <div
        class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
      >
        3
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid vertical alignment bottom 1`] = `
<div
  class="Gridstory__BoxWhite-sc-1gljmzb-1 ibGzPU"
  style="height:300px"
>
  <div
    class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
  >
    <div
      class="row default-width position-start text-align-left bottom normal "
    >
      <div
        class="col-lg-12 col-lg-offset-0 "
      >
        <div
          class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid vertical alignment middle 1`] = `
<div
  class="Gridstory__BoxWhite-sc-1gljmzb-1 ibGzPU"
  style="height:300px"
>
  <div
    class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
  >
    <div
      class="row default-width position-start text-align-left middle normal "
    >
      <div
        class="col-lg-12 col-lg-offset-0 "
      >
        <div
          class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid vertical alignment top 1`] = `
<div
  class="Gridstory__BoxWhite-sc-1gljmzb-1 ibGzPU"
  style="height:300px"
>
  <div
    class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
  >
    <div
      class="row default-width position-start text-align-left top normal "
    >
      <div
        class="col-lg-12 col-lg-offset-0 "
      >
        <div
          class="Gridstory__Box-sc-1gljmzb-0 jYVQvc"
        />
      </div>
    </div>
  </div>
</div>
`;
